force-app/main/default/objects/Product_API_Config__mdt/Product_API_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Product API integration</description>
    <label>Product API Config</label>
    <pluralLabel>Product API Configs</pluralLabel>
</CustomObject>