force-app/main/default/objects/Product_API_Config__mdt/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <inlineHelpText>The base URL for the product API</inlineHelpText>
    <label>API Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>