force-app/main/default/objects/Product_API_Config__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <inlineHelpText>The username for API authentication</inlineHelpText>
    <label>Username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>